## 20210402

- k0s版本升级为0.12.1
- 新增k0sctl

## 20210401
- k3s版本升级为v1.20.5+k3s1
- 新增k3s.install

## 20210331

- docker-compose版本升级为1.28.6
- istio版本升级到1.9.2
- getistio版本升级到v1.0.5
- osm版本升级为0.8.2
- k0s版本升级为0.12.0

## 20210322

- k8s版本升级为1.18.17

## 20210316

- linkerd2版本升级到2.10.0,修复下载url
- getistio版本升级到v1.0.4
- istio版本升级到1.9.0
- helmv3版本升级为3.5.3
- etcd版本升级为3.4.15

## 20210226

- 新增getpkg获取k8s资源pkg
- 新增getistiov1.0.3
- docker-compose版本升级为1.28.5
- linkerd2版本升级为2.9.4
- k3s版本升级为v1.20.4+k3s1

## 20210218

- k8s版本升级为1.18.16
- docker-compose版本升级为1.28.3

## 20210210

- helmv3版本升级为3.5.2
- istio版本升级为1.9.0
- osm版本升级为0.7.0
- linkerd2版本升级为2.9.3
- k0s版本升级为0.10.0

## 20210204

- 更新k8s(pkg)脚本
- helmv3版本升级为3.5.1

## 20210127

- kind版本升级为0.10.0
- k8s版本升级为1.18.15
- helmv3版本升级为3.5.0
- docker-compose版本升级为1.28.2
- istio版本升级为1.8.2
- osm版本升级为0.6.1
- linkerd2版本升级为2.9.2
- k3s版本升级为v1.20.2+k3s1
- k0s版本升级为0.9.1
- critools版本升级为1.20.0


## 20201229

- tools新增 weaveworks/scope 版本为 1.13.1

## 20201227

- 新增mc, k0s
- k3s版本升级为`v1.20.0+k3s2`