@@ -1,3 +1,3 @@
 #!/bin/bash
 
-docker run --rm -v /root:/sysdir registry.cn-beijing.aliyuncs.com/k7scn/pkg:1.18.17 cp /kube.tgz /sysdir
+docker run --rm -v /root:/sysdir registry.cn-beijing.aliyuncs.com/k7scn/pkg:1.18.18 cp /kube.tgz /sysdir
