@@ -1,3 +1,11 @@
+## 20210423
+- k8s版本升级为1.18.18
+- helmv3版本升级为3.5.4
+- docker-compose版本升级为1.29.1
+- istio版本升级到1.9.3
+- osm版本升级为0.8.3
+- linkerd2版本升级到2.10.1
+
 ## 20210402
 
 - k0s版本升级为0.12.1
